# akshay-trading-5

./: .gitignore  .pre-commit-config.yaml  README.md  a.py  app.py  cp_start_script.sh  crypto_pricing.py  dataSource.py  dataset_forecast.py  dataset_sensor.py  demo-mkts.ipynb  demo_graph_readings_forecast.py  demo_markets.py  demo_producer_consumer.py  demo_record_data.py  demo_record_forecast.py  demo_record_sensor.py  demo_tickers.py  demo_websocket_minimal.py  demo_websocket_qt6.py  dk.py  dk_keeper.py  draftkings_deepseek.py  draftkings_get_request.py  draftkings_init.py  draftkings_kalshi_sports.py  draftkings_order_placer.py  draftkings_order_placer_baseball.py  draftkings_order_placer_golf.py  draftkings_websocket.py  extract_forecast.py  fetch_dbs.sh  forecast_dataset.py  graph_readings_forecast.py  index.html  index2.html  kalshi_adv_app.py  kalshi_ref.py  main.ipynb  main.py  (+35 more)
api_cpp/: CMakeLists.txt  main.cpp
at5/: dune-project
at5/lib/: dune
at5/test/: dune
examples/: demo_markets.py
frontend/: graph.js  index.html  server.js  style.css  websocket.js
original/: clients.py  main.py
tests/: test_orderbook_update.py  test_utils.py
trading/: __init__.py  kalshi_ref.py  orderbook.py  orderbook_update.py  stream_orderbook.py  utils.py  weather_extract_forecast.py  weather_info.py  weather_sensor_reading.py
