[project]
name = "akshay-trading-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0.4",
    "ipykernel>=6.29.5",
    "jsonargparse>=4.40.0",
    "loguru>=0.7.3",
    "pytest>=8.4.1",
    "requests>=2.32.4",
    "sortedcontainers>=2.4.0",
    "websockets>=15.0.1",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
