[project]
name = "akshay-trading-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "aiosqlite>=0.21.0",
    "bs4>=0.0.2",
    "cryptography>=45.0.4",
    "draccus>=0.11.5",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "jsonargparse>=4.40.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "orjson>=3.11.1",
    "pandas>=2.3.1",
    "pytest>=8.4.1",
    "requests>=2.32.4",
    "seaborn>=0.13.2",
    "sortedcontainers>=2.4.0",
    "sqlalchemy>=2.0.42",
    "torch>=2.8.0",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]
